mobile-view-changes

--- a/websitewala/src/app/about/about.module.css
+++ b/websitewala/src/app/about/about.module.css
@@ -59,4 +59,19 @@
       flex-direction: column;
       gap: 50px;
     }
+
+    .title{
+      font-size: 30px;
+    }
+
+    .desc{
+      font-size: 16px;
+      font-weight: 300;
+    }
+  }
+
+  @media (max-width: 1024px) {
+    .title{
+      font-size: 38px;
+    }
   }
