--- a/websitewala/src/component/navbar/links/links.module.css
+++ b/websitewala/src/component/navbar/links/links.module.css
@@ -36,5 +36,6 @@ font-weight: bold;
         align-items: center;
         justify-content: center;
         gap: 10px;
+        z-index: 999;
     }
 }
