--- a/websitewala/src/app/home.module.css
+++ b/websitewala/src/app/home.module.css
@@ -77,3 +77,38 @@
       font-size: 16px;
     }
   }
+
+@media screen and (max-width: 1400px) {
+  .title{
+    margin-top: 0px;
+    font-size: 28px;
+  }
+
+}
+
+@media only screen and (max-width: 600px) {
+
+}
+
+@media screen and (max-width: 1200px) {
+  .title{
+    margin-top: 0px;
+    font-size: 28px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+
+}
+
+@media screen and (max-width: 768px) {
+
+}
+
+@media screen and (max-width: 567px) {
+
+}
+
+@media screen and (max-width: 350px) {
+
+}
