--- a/websitewala/src/component/navbar/navbar.module.css
+++ b/websitewala/src/component/navbar/navbar.module.css
@@ -1,8 +1,14 @@
 .container {
-display: flex;
-justify-content: space-between;
-align-items: center;
-height: 100px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+    background-color: #446875;
+    z-index: 999;
 }
 .logo {
     font-size: 30px;
@@ -13,4 +19,27 @@ height: 100px;
 }
 .logoImage {
     object-fit: contain;
+}
+@media screen and (max-width: 768px) {
+    .container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 100px;
+        background-color: #446875;
+        z-index: 999;
+        padding-right: 16px;
+    }
+}
+
+@media screen and (max-width: 567px) {
+
+}
+
+@media screen and (max-width: 350px) {
+
 }
